# beagle-lib

./: meson.build
libhmsbeagle/: config.h.meson  meson.build
